Added new Task for collecting resources from the map